--- a/app/pages/article/article.scss
+++ b/app/pages/article/article.scss
@@ -1,7 +1,38 @@
-div.selection {
-  font-size: 22px;
-  display: block;
-  text-align: center;
-  padding-top: 5%;
+.news-thumb{
+    margin: none;
+}
+.news-list .item{
+    padding-left: 0;
+}
+ion-icon[item-left]{
+    margin: 0;
+}
+ion-icon[item-left] + .item-inner{
+    margin-left: 10px;
+}
+.article{
+    margin: 0;
+    width:auto;
+    box-shadow: none;
+    border-bottom: 2px solid #00a500;
+}
+.article-title{
+    background-color: #00a500;
+    color: #fff;
+    text-align: center;
+    padding: 20px 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    font-weight: 300;
+}
+.article-date{
+    font-size: 12px;
+    color: #9a9a9a;
+}
+.article img{
+    height: auto;
+}
+.article p{
+    text-align: left;
 }
 
